# senka

./: .env.example  .gitignore  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: renovate.json
apps/auth-proxy/: eslint.config.js  package.json  tsconfig.json
apps/expo/: eslint.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/expo/src/app/: index.tsx
apps/expo/src/utils/: api.tsx
apps/models/: pyproject.toml
apps/models/app/: main.py
apps/models/app/common/: db.py
apps/models/app/modules/domains/: model.py  router.py  schema.py  services.py
apps/models/models/gda/training/: dataset.py  model.py  train.py
apps/models/models/gda/utils/: instructions.py  normalize_dataset.py
apps/models/models/lib/: hf.py
apps/nextjs/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/nextjs/src/: env.ts  middleware.ts
apps/nextjs/src/app/: globals.css  layout.tsx  page.tsx
apps/nextjs/src/trpc/: react.tsx  server.ts
apps/scheduler/: eslint.config.js  package.json  tsconfig.json
apps/scheduler/src/: crontab  env.ts  worker.ts
apps/scheduler/src/tasks/: _tasks-list.ts  check-inactive-resources.ts  test.task.ts
apps/scheduler/src/utils/: api.ts  (+1 more)
tooling/eslint/: package.json
tooling/github/: package.json
tooling/prettier/: index.js  package.json
tooling/tailwind/: eslint.config.js  package.json  tsconfig.json
tooling/typescript/: package.json
turbo/generators/: config.ts
turbo/generators/templates/: eslint.config.js.hbs  package.json.hbs  tsconfig.json.hbs
(+16 files in other folders)
